--- a/theme.css
+++ b/theme.css
@@ -519,7 +519,7 @@ progress::-webkit-progress-bar {
 }
 
 .enimg {
-  background-image: url('../img/enneagram_result.png'),url('https://s2.loli.net/2022/06/25/sojh7WyRxmKcgdv.png');
+  background-image: url('https://s2.loli.net/2022/06/25/sojh7WyRxmKcgdv.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
