--- a/theme.css
+++ b/theme.css
@@ -104,7 +104,7 @@ progress::-webkit-progress-bar {
   vertical-align: middle;
   text-align: center;
   height: 40px;
-  width: 100px;
+  min-width: 100px;
   font-size: 1.5em;
   font-family: "Microsoft YaHei";
   font-weight: 600;
