--- a/theme.css
+++ b/theme.css
@@ -529,66 +529,75 @@ progress::-webkit-progress-bar {
 }
 .IIposition {
   position:absolute;
-  left:70%;
-  top:32%;
+  left:42%;
+  top:-8%;
   width: 20%;
   height: 20%;
+  transform: translate(185%, 185%);
 }
 .IIIposition {
   position:absolute;
-  left:70%;
-  top:58%;
+  left:38%;
+  top:20%;
   width: 20%;
   height: 20%;
+  transform: translate(185%, 185%);
 }
 .IVposition {
   position:absolute;
-  left:52%;
-  top:75%;
+  left:15%;
+  top:40%;
   width: 20%;
   height: 20%;
+  transform: translate(185%, 185%);
 }
 .Vposition {
   position:absolute;
-  left:25%;
-  top:75%;
+  left:-15%;
+  top:40%;
   width: 20%;
   height: 20%;
+  transform: translate(185%, 185%);
 }
 .VIposition {
   position:absolute;
-  left:2%;
-  top:58%;
+  left:-38%;
+  top:20%;
   width: 20%;
   height: 20%;
+  transform: translate(185%, 185%);
 }
 .VIIposition {
   position:absolute;
-  left:1%;
-  top:33%;
+  left:-42%;
+  top:-8%;
   width: 20%;
   height: 20%;
+  transform: translate(185%, 185%);
 }
 .VIIIposition {
   position:absolute;
-  left:13%;
-  top:7%;
+  left:-27%;
+  top:-35%;
   width: 20%;
   height: 20%;
+  transform: translate(185%, 185%);
 }
 .IXposition {
   position:absolute;
-  left:36%;
-  top:-1%;
+  left:0%;
+  top:-45%;
   width: 20%;
   height: 20%;
+  transform: translate(185%, 185%);
 }
 .Iposition {
   position:absolute;
-  left:60%;
-  top:7%;
+  left:27%;
+  top:-35%;
   width: 20%;
   height: 20%;
+  transform: translate(185%, 185%);
 }
 .e_toolitop {
   position:absolute;
